Added requested changes - icon and our jobs section

--- a/src/app/job-info/job-info.component.scss
+++ b/src/app/job-info/job-info.component.scss
@@ -8,15 +8,11 @@
 }
 
 
-@media screen and (max-width: 950px) {
+@media (min-width: 400px) and (max-width: 950px) {
     #resume {
         padding-top: 10px;
         padding-left: 0px !important;
     }
 
-    .header-icon-div {
-        padding-bottom: 4rem !important;
-    }
-
-    /* Other styles specific for small screens */
 }
+
