--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@
                   <p class="ns-fs-11 description mt-3">NascentTechnologies provides its clients full-time support in
                     terms of
                     maintaining all up-dates, security features, anti-viruses and constant monitoring.</p>
-                  <a href="javascript:void(0)" class="btn btn-warning mt-4"  [routerLink]="['/support']">Learn more</a>
+                  <a href="javascript:void(0)" class="btn btn-warning mt-4" [routerLink]="['/support']">Learn more</a>
                 </div>
               </div>
             </div>
@@ -148,92 +148,19 @@
                 operations.</p>
             </div>
           </div>
-          <div data-aos="zoom-in-right" data-aos-duration="1000">
+          <div data-aos="zoom-in-right" data-aos-duration="1000" *ngFor="let service of services"
+            style="position: relative; z-index: 5;">
             <div class="card card-lift--hover shadow shadow-lg--hover mt-5">
               <div class="card-body">
                 <div class="d-flex px-3">
                   <div>
                     <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                      <i class="fa fa-cogs"></i>
+                      <i [ngClass]="service['iconName']"></i>
                     </div>
                   </div>
                   <div class="pl-4">
-                    <h5 class="title text-success">Project Implementation services</h5>
-                    <p class="ns-fs-11">We assemble a team of multi-skilled consultants, to serve either in a consulting
-                      role or work as a
-                      fully integrated part of your business.
-                      Our teams are managed through SLAs and KPIs to ensure the highest degree of excellence throughout
-                      your project.</p>
-                    <!-- <a href="javascript:void(0)" class="text-success">Learn more</a> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in-right" data-aos-duration="1000">
-            <div class="card card-lift--hover shadow shadow-lg--hover mt-5">
-              <div class="card-body">
-                <div class="d-flex px-3">
-                  <div>
-                    <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                      <i class="fa fa-puzzle-piece"></i>
-                    </div>
-                  </div>
-                  <div class="pl-4">
-                    <h5 class="title text-warning">Customized services</h5>
-                    <p class="ns-fs-11">Our team of experts commit to building the solutions you require, on time and
-                      within budget. We
-                      perform this service through our global network of delivery centers & centers of excellence
-                      engineers, to serve either in a consulting role or work as a fully integrated part of your
-                      business.
-                    </p>
-                    <!-- <a href="javascript:void(0)" class="text-warning">Learn more</a> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in-right" data-aos-duration="1000">
-            <div class="card card-lift--hover shadow shadow-lg--hover mt-5">
-              <div class="card-body">
-                <div class="d-flex px-3">
-                  <div>
-                    <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                      <i class="fa fa-exchange"></i>
-                    </div>
-                  </div>
-                  <div class="pl-4">
-                    <h5 class="title text-warning">Project Migration Services</h5>
-                    <p class="ns-fs-11">Our Migration Services provide you the expertise to reduce the time to market
-                      and
-                      reap the benefits
-                      sooner of your new or upgraded platform. We’ll bring our expertise and experience to make sure the
-                      risk is minimized and the project goes as smoothly as possible.
-                    </p>
-                    <!-- <a href="javascript:void(0)" class="text-warning">Learn more</a> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in-right" data-aos-duration="1000" style="position: relative; z-index: 5;">
-            <div class="card card-lift--hover shadow shadow-lg--hover mt-5">
-              <div class="card-body">
-                <div class="d-flex px-3">
-                  <div>
-                    <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                      <i class="fa fa-desktop"></i>
-                    </div>
-                  </div>
-                  <div class="pl-4">
-                    <h5 class="title text-warning">IT administration services</h5>
-                    <p class="ns-fs-11">Our IT Administration service can take away all of the hassle and ensure that
-                      your
-                      IT systems are
-                      running smoothly and efficiently on your behalf. We can perform scheduled health checks on your
-                      servers and other hardware to reduce the potential for breakdown.
-                    </p>
-                    <!-- <a href="javascript:void(0)" class="text-warning">Learn more</a> -->
+                    <h5 class="title text-success" [innerHTML]="service['title']"></h5>
+                    <p class="ns-fs-11" [innerHTML]="service['description']">
                   </div>
                 </div>
               </div>
@@ -265,47 +192,18 @@
               <i class="fa fa-life-ring"></i>
             </div>
             <h3>Supports</h3>
-            <p class="ns-fs-11">An activity required for successful execution of a product or program or process is
-              known as Support
-              service. The support services are managed by a separate department. It is extremely important for any
-              organization to have good support services to succeed in their business. Support services are important
-              for the immediate relief of the customers and the clients. Support services are not just limited to phone
-              calls nowadays email, chat, web forms, and social communications, as well as self-service support sites.
+            <p class="ns-fs-11" [innerHTML]="supports_section['description']">
             </p>
             <ul class="list-unstyled mt-5">
-              <li class="py-2">
+              <li class="py-2" *ngFor="let item of supports_section['support-items']">
                 <div class="d-flex align-items-center">
                   <div>
                     <div class="badge badge-circle badge-success mr-3">
-                      <i class="ni ni-cloud-download-95"></i>
+                      <i [ngClass]="item.iconName" class="ni ni-cloud-download-95"></i>
                     </div>
                   </div>
                   <div>
-                    <h6 class="ns-fs-11 mb-0">Support for Cloud</h6>
-                  </div>
-                </div>
-              </li>
-              <li class="py-2">
-                <div class="d-flex align-items-center">
-                  <div>
-                    <div class="badge badge-circle badge-success mr-3">
-                      <i class="ni ni-money-coins"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <h6 class="ns-fs-11 mb-0">Support for Server and Networking</h6>
-                  </div>
-                </div>
-              </li>
-              <li class="py-2">
-                <div class="d-flex align-items-center">
-                  <div>
-                    <div class="badge badge-circle badge-success mr-3">
-                      <i class="ni ni-folder-17"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <h6 class="ns-fs-11 mb-0">Super for Data Center</h6>
+                    <h6 class="ns-fs-11 mb-0" [innerHTML]="item.title"></h6>
                   </div>
                 </div>
               </li>
@@ -321,7 +219,8 @@
       <div class="row text-center justify-content-center">
         <div class="col-lg-12">
           <h2 class="display-3 text-white">Consulting</h2>
-          <p class="lead text-white ns-fs-11 text-left">Nascent Technologies understands the growing need of employment and the
+          <p class="lead text-white ns-fs-11 text-left">Nascent Technologies understands the growing need of employment
+            and the
             choices of
             Candidates when it comes to choosing and picking up a Professional Career; Nascent Technologies is open and
             has no restrictions related to or subject to any territorial limitations or other wise and widely assist all
