--- a/src/app/it-consulting/it-consulting.component.html
+++ b/src/app/it-consulting/it-consulting.component.html
@@ -35,37 +35,7 @@
                                     exceptional work </h4>
                             </div>
                             <div class="card-body">
-                                <p class="ns-fs-11 description mt-3"><b class="font-weight-bold">Nascent
-                                        Technologies</b> understands the growing need of employment and the
-                                    choices of
-                                    Candidates when it comes to choosing and picking up a Professional Career; Nascent
-                                    Technologies
-                                    is open and
-                                    has no restrictions related to or subject to any territorial limitations or other
-                                    wise and
-                                    widely assist all
-                                    Candidates located any where to pick a desired Professional Career in their desired
-                                    location
-                                    with their
-                                    custom made package or work preferences. Nascent Technologies assists its clients in
-                                    their
-                                    Staffing
-                                    Solutions and Services by giving them a range of staffing options like <b
-                                        class="font-weight-bold">temporary staffing,
-                                        contractual</b>
-                                    staffing and long term staffing. It helps the client to recruit people with strength
-                                    of
-                                    character and
-                                    integrity who understands the goals, familiar with the nature of business using its
-                                    expertise in
-                                    the process
-                                    of identifying and recommending the candidates to the clients, simultaneously,
-                                    adhering to the
-                                    clients’
-                                    detailed requirements and the candidates availability and sensitivity of acceptance
-                                    in taking up
-                                    the offer.
-                                    Nascent Technologies also supports its clients on both on and off shore augmentation
+                                <p class="ns-fs-11 description mt-3" [innerHTML]="description">
                                 </p>
                             </div>
                         </div>
@@ -78,7 +48,37 @@
 
     <section class="section section-lg pt-5">
         <div class="container">
-            <div class="row row-grid justify-content-center">
+
+            <div *ngFor="let item of customArray" data-aos="zoom-in" class="row pb-2">
+                <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
+                    <div class="card card-lift--hover shadow border-0 height-100">
+                        <div class="card-body py-5">
+                            <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                <i [ngClass]="services[item].iconName"></i>
+                            </div>
+                            <h5 class="font-weight-bold mt-3">{{services[item].title}}</h5>
+                            <p class=" mt-3" [innerHTML]="services[item].description"></p>
+                        </div>
+                    </div>
+                </div>
+                <ng-container *ngIf="services[item + 1]">
+                    <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
+                        <div class="card card-lift--hover shadow border-0 height-100">
+                            <div class="card-body py-5">
+                                <div
+                                    class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                    <i [ngClass]="services[item+1].iconName"></i>
+                                </div>
+                                <h5 class="font-weight-bold mt-3">{{services[item+1].title}}</h5>
+                                <p class=" mt-3" [innerHTML]="services[item+1].description"></p>
+                            </div>
+                        </div>
+                    </div>
+                </ng-container>
+            </div>
+
+
+            <!-- <div class="row row-grid justify-content-center">
                 <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
                     <div class="card card-lift--hover shadow border-0 height-100">
                         <div class="card-body py-5">
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- SVG separator -->
         <div class="separator separator-bottom separator-skew zindex-100">
