--- a/src/app/our-portfolio/our-portfolio.component.html
+++ b/src/app/our-portfolio/our-portfolio.component.html
@@ -50,33 +50,76 @@
         <div class="container">
             <div class="row justify-content-center pt-3">
                 <div *ngFor="let i of customArray" data-aos="zoom-in" class="row pt-3">
-                    <div class="col-lg-6 pb-3">
+                    <div class="col-lg-4 pb-3">
                         <div class="card card-lift--hover shadow border-0 height-100">
-                            <div class="card-body py-5">
+                            <div class="card-body py-2 pt-4">
                                 <div class="mb-4">
                                     <img alt="Company Logo" class="img-fluid rounded shadow p-3"
-                                        src="{{portfolioItems[i].iconUrl}}" style="width: 100px;">
+                                        src="{{portfolioItems[i].iconUrl}}" style="width: 150px;">
                                 </div>
                                 <h6 class="text-primary text-uppercase">{{portfolioItems[i].name}}</h6>
-                                <p class="ns-fs-11 description mt-3">{{portfolioItems[i].description}}</p>
+                                <p class="ns-fs-11 description mt-3">
+                                    {{portfolioItems[i].description.substring(0,140)}}... <a
+                                        (click)="sendEmail(classic2, portfolioItems[i].description)"
+                                        href="javascript:void(0)">Learn more</a></p>
+
                             </div>
                         </div>
                     </div>
 
                     <ng-container *ngIf="portfolioItems[i + 1]">
-                        <div class="col-lg-6 pb-3">
+                        <div class="col-lg-4 pb-3">
                             <div class="card card-lift--hover shadow border-0 height-100">
-                                <div class="card-body py-5">
+                                <div class="card-body py-2 pt-4">
                                     <div class="mb-4">
                                         <img alt="Circle image" class="img-fluid rounded shadow p-3"
-                                            src="{{portfolioItems[i+1].iconUrl}}" style="width: 100px;">
+                                            src="{{portfolioItems[i+1].iconUrl}}" style="width: 150px;">
                                     </div>
                                     <h6 class="text-primary text-uppercase">{{portfolioItems[i+1].name}}</h6>
-                                    <p class="ns-fs-11 description mt-3">{{portfolioItems[i+1].description}}</p>
+                                    <p class="ns-fs-11 description mt-3">
+                                        {{portfolioItems[i+1].description.substring(0,140)}}... <a
+                                            (click)="sendEmail(classic2, portfolioItems[i+1].description)"
+                                            href="javascript:void(0)">Learn more</a></p>
+
                                 </div>
                             </div>
                         </div>
                     </ng-container>
+
+                    <ng-container *ngIf="portfolioItems[i + 2]">
+                        <div class="col-lg-4 pb-3">
+                            <div class="card card-lift--hover shadow border-0 height-100">
+                                <div class="card-body py-2 pt-4">
+                                    <div class="mb-4">
+                                        <img alt="Circle image" class="img-fluid rounded shadow p-3"
+                                            src="{{portfolioItems[i+2].iconUrl}}" style="width: 150px;">
+                                    </div>
+                                    <h6 class="text-primary text-uppercase">{{portfolioItems[i+2].name}}</h6>
+                                    <p class="ns-fs-11 description mt-3">
+                                        {{portfolioItems[i+2].description.substring(0,140)}}... <a
+                                            (click)="sendEmail(classic2, portfolioItems[i+2].description)"
+                                            href="javascript:void(0)">Learn more</a></p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </ng-container>
+
+                    <ng-template #classic2 let-c="close" let-d="dismiss">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <div class="py-3 text-center">
+                                    <div>
+                                        <span class="mt-2">{{description}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer justify-content-start">
+                                <button type="button" (click)="c('Close click')" class="btn btn-primary">Ok, Got
+                                    it</button>
+                            </div>
+                        </div>
+                    </ng-template>
                 </div>
             </div>
         </div>
