--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,25 +7,38 @@
         <h4 class="mb-0 font-weight-light">Let's get in touch on any of these platforms.</h4>
       </div>
       <div class="col-lg-6 text-lg-center btn-wrapper">
-        <a target="_blank" href="https://twitter.com/creativetim"
+        <a target="_blank" href="https://twitter.com/NascentInc"
           class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" ngbTooltip="Follow us">
           <i class="fa fa-twitter"></i>
         </a>
-        <a target="_blank" href="https://www.facebook.com/creativetim"
+        <a target="_blank" href="https://www.facebook.com/Nascenttechnologiesinc"
           class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg" ngbTooltip="Like us">
           <i class="fa fa-facebook-square"></i>
         </a>
-        <a target="_blank" href="https://dribbble.com/creativetim"
+        <a target="_blank" href="https://www.instagram.com/nascenttechnologiesinc/"
           class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round" ngbTooltip="Follow us">
           <i class="fa fa-instagram"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/company/nascent-technologies-inc"
+          class="btn btn-icon-only btn-lg btn-round" style="background-color: #0A66C2; color: white;"
+          ngbTooltip="Connect with us">
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a target="_blank" href="https://www.youtube.com/channel/UCh4vUkRnqnQZUd03ZbL_z1Q"
+          class="btn btn-neutral btn-icon-only btn-youtube btn-lg btn-round" ngbTooltip="Subscribe to us">
+          <i class="fa fa-youtube"></i>
         </a>
       </div>
     </div>
     <hr>
+    <div class="developer" style="display: none;">
+      <span>Srikanth Voma</span>
+      <span>https://instagram.com/vsk.srikanth?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D</span>
+    </div>
     <div class="row align-items-center justify-content-md-between">
       <div class="col-md-6">
         <div class="copyright">
-          &copy; 2022 Nascent Technologies. Designed by VSK. All Rights Reserved.
+          &copy; 2021 Nascent Technologies Inc. All Rights Reserved.
         </div>
       </div>
     </div>
